# cpt.run

./: Cargo.toml  LICENSE  README.md  mise.toml
crates/core/: Cargo.toml
crates/core/src/: capture.rs  commands.rs  config.rs  database.rs  lib.rs  model.rs  parser.rs
crates/core/src/services/: mod.rs  tasks.rs
crates/desktop/: Cargo.toml  README.md
crates/desktop/src/: lib.rs  main.rs  telemetry.rs
crates/desktop/src/app/: commands.rs  desktop.rs  helpers.rs  message.rs  mod.rs  options.rs  seeding.rs  state.rs  tests.rs  theme.rs  update.rs
crates/desktop/src/app/views/: capture.rs  command_palette.rs  layout.rs  mod.rs  sidebar.rs  status.rs  styles.rs  task_table.rs  tasks.rs  toolbar.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/mcp/src/tools/: capture.rs  defer_task.rs  delete.rs  get.rs  list.rs  mod.rs  status.rs  util.rs
crates/tmp/dev-cpt/: cpt.sqlite3
crates/tmp/dev-gt/: gt.sqlite3
crates/tui/: Cargo.toml
crates/tui/src/: cli.rs  commands.rs  config.rs  lib.rs
crates/tui/src/tui/: buffer.rs  constants.rs  filters.rs  helpers.rs  mod.rs
crates/tui/src/tui/app/: commands.rs  input.rs  mod.rs  render.rs  tests.rs
icons/: Contents.json  cpt.icns
scripts/: build_macos_app.sh  release-desktop.sh
src/: lib.rs  main.rs
