[package]
name = "cpt-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
once_cell = "1.18"
regex = "1.10"
rusqlite = { version = "0.29", features = ["chrono", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ulid = { version = "1.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.18"
tempfile = "3.10"
