[package]
name = "cpt-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["telemetry"]
telemetry = []
notifications = []

[dependencies]
anyhow = "1.0"
dark-light = "1.0"
cpt-core = { path = "../core" }
iced = { git = "https://github.com/iced-rs/iced", rev = "bfc27e4691875840010e3d1e282b8e26b821c569", default-features = false, features = ["wgpu", "tokio", "advanced", "lazy"] }
chrono = { version = "0.4", features = ["clock"] }
parking_lot = "0.12"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
png = "0.17"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

[package.metadata.bundle]
identifier = "run.cpt.desktop"
resources = ["../../docs/user-guide"]
short_description = "Capture Plan Track Run"
long_description = """
Perform 100x better. Capture Plan Track Run
"""
copyright = "© 2025 cpt.run"
category = "public.app-category.productivity"
osx_minimum_system_version = "13.0"

[package.metadata.bundle.bin.cpt-desktop]
name = "cpt.run"
icon = ["icons/cpt.icns"]
